# PACompressionTest

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEBUG_LOGFILE.txt  DoubleLineEdit.cpp  DoubleLineEdit.h  FrequencyEdit.cpp  FrequencyEdit.h  FrequencyEdit.ui  LICENSE.md  LandingPage.cpp  LandingPage.h  LandingPage.ui  MeasurementData.cpp  MeasurementData.h  Notes.txt  PACompressionTest.pro  PaCompressionTest.pro  PointsLineEdit.cpp  PointsLineEdit.h  PositiveDoubleLineEdit.cpp  PositiveDoubleLineEdit.h  PowerPoint.cpp  PowerPoint.h  PowerSweep.cpp  PowerSweep.h  ProcessTrace.cpp  ProcessTrace.h  QtCreatorPackageManager.cmake  README.md  ReleaseLink.bat  Resources.qrc  Results.cpp  Results.h  ResultsFile.cpp  ResultsFile.h  RsaPaCompressionTest.pro  RunSweeps.cpp  RunSweeps.h  Settings.h  (+32 more)
Application/: Application.pro  CMakeLists.txt  DEBUG_LOGFILE.txt  Resources.qrc  VS2010Resources.rc  helpers.cpp  helpers.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Application/Keys/: CHANNEL  COMPRESSION_LEVEL  CONNECTION_ADDRESS  EXPORT_PATH  FREQ_POINTS  IF_BW  IF_BW_PREFIX  MINI_GEOMETRY_KEY  SAVE_PATH  STANDARD_GEOMETRY  START_FREQUENCY  START_POWER  STOP_FREQ  STOP_FREQUENCY  STOP_FREQ_PREFIX  TRACES
Archive/: getcalibration.cpp  getcalibration.h  getcalibration.ui
Core/: CMakeLists.txt  Core.pro  CoreResources.qrc  DragWidget.cpp  DragWidget.h  FrequencySweep.cpp  FrequencySweep.h  MeasureThread.cpp  MeasureThread.h  MeasurementData.cpp  MeasurementData.h  MeasurementSettings.cpp  MeasurementSettings.h  MiniPage.cpp  MiniPage.h  MiniPage.ui  ProcessTrace.cpp  ProcessTrace.h  ProgressPage.cpp  ProgressPage.h  ProgressPage.ui  RunSweeps.cpp  RunSweeps.h  SafeFrequencySweep.cpp  SafeFrequencySweep.h  Settings.h  SettingsPage.cpp  SettingsPage.h  SettingsPage.ui  core.pri  tocomplex.h
Core/MeasureThread/: FrequencySweep.cpp  FrequencySweep.h  MeasureThread.cpp  MeasureThread.h  SafeFrequencySweep.cpp  SafeFrequencySweep.h  measurethread.pri
Core/Traces/: TraceSettings.cpp  TraceSettings.h  TraceSettingsDelegate.cpp  TraceSettingsDelegate.h  TraceSettingsModel.cpp  TraceSettingsModel.h  TracesWidget.cpp  TracesWidget.h  TracesWidget.ui  traces.pri
Documentation/: Data_AMPM.xlsx  GCA.CSV  GCA_Improvement_List.xlsx  GCA_Improvement_List_01262016.xlsx  GCA_Improvement_List_02012016.xlsx  GCA_Improvement_List_02022016.xlsx  GCA_Improvement_List_02022016_v2.xlsx  GCA_Improvement_List_V1p6.xlsx  GCA_Improvement_List_V1p7.xlsx  GCA_Improvement_List_V1p7_rev2.xlsx  GCA_Improvement_List_V2.xlsx  GCA_Improvement_List_V2p1.xlsx  GCA_Improvement_List_V2p1p6_rev1.xlsx  GCA_Improvement_List_V2p2_rev2.xlsx  GCA_Improvement_List_V2p3.xlsx  PA Compression Test.pptx  Pulsed SCPI commands.txt  RSA PA Compression Test.pages  TracePermutations.xlsx  User manual.docx  v1.6 Data CSV Example.csv  ~$GCA_Improvement_List_01262016.xlsx  ~$er manual.docx
Help/: Compression point query.txt  Compression_test_macro_instructions.docx  RSA PA COMPRESSION TEST UTILITY REVIEW_.doc  RSA PA Compression Test Log.txt
Installer/: Product.wxs  Product.wxs.bak  RSA PA Compression Test 0.9.0.0.wixpdb  RSA PA Compression Test 0.9.1.0.wixpdb  Upgrade Code.txt  WiX build log.txt  _Product.wxs  __Product.wixobj  __Product.wxs  create_installer.bat  license.rtf
Keys/: COMPRESSION_POINT  CONNECTION_ADDRESS  CONNECTION_TYPE  FREQ_POINTS  OPEN_PATH  POST_CONDITION  POWER_POINTS  PRINT_PATH  START_FREQ  START_FREQ_UNITS  START_POWER  STOP_FREQ  STOP_POWER
MiniPageTest/: MiniPageTest.pro  main.cpp
PlotUiTest/: DEBUG_LOGFILE.txt  PlotUiTest.pro  Settings.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
PlotWidget/: PlotWidget.cpp  PlotWidget.h  PlotWidget.ui  plotwidget.pri
RsaToolbox/: CMakeLists.txt  Definitions.h  General.cpp  General.h  Key.h  Log.cpp  NetworkData.cpp  NetworkData.h  RsibBus.cpp  Touchstone.cpp  Touchstone.h  TraceData.cpp  TraceData.h  VisaBus.cpp  Vna.cpp  Vna.h  Vna.h.autosave  rsatoolbox.pri  rsatoolbox.pro  rsib.h
RsaToolbox/Logging/: CMakeLists.txt  logging.cpp  logging.hpp
RsaToolbox/QCustomPlot/: CMakeLists.txt  qcustomplot.pri
RsaToolbox/RsaToolbox/: CMakeLists.txt  rsatoolbox.pro
RsaToolbox/RsaToolbox/Bus/: GenericBus.cpp  GenericBus.h
RsaToolbox/RsaToolbox/Bus/No/: NoBus.cpp
RsaToolbox/RsaToolbox/Bus/Tcp/: TcpBus.cpp
RsaToolbox/RsaToolbox/Bus/Visa/: VisaBus.cpp  VisaBus.h
RsaToolbox/RsaToolbox/Bus/Visa/RsVisa/: visa.h  visatype.h
RsaToolbox/RsaToolbox/GUI/About/: About.h  main.cpp
RsaToolbox/RsaToolbox/GUI/Figure/: Figure.h  Figure.ui
RsaToolbox/RsaToolbox/GUI/GetSnpFile/: GetSnpFile.h
RsaToolbox/RsaToolbox/GUI/ListPanel/: ListPanel.h
RsaToolbox/RsaToolbox/GUI/TimedProgressBar/: TimedProgressBar.cpp  TimedProgressBar.h
RsaToolbox/RsaToolbox/GUI/Update/: Update.h
RsaToolbox/RsaToolbox/GUI/Wizard/: BreadCrumbs.h  Wizard.h  WizardButtons.h
RsaToolbox/RsaToolbox/GUI/getSaveFileNameWidget/: getSaveFileNameWidget.h
RsaToolbox/RsaToolbox/General/: General.h  NetworkData.cpp  NetworkData.h
RsaToolbox/RsaToolbox/Instruments/: GenericInstrument.cpp  GenericInstrument.h
RsaToolbox/RsaToolbox/Instruments/Vna/: Vna.cpp  Vna.h  VnaCalKit.cpp  VnaCalUnit.h  VnaCalibrate.cpp  VnaChannel.cpp  VnaDiagram.cpp  VnaExtensionUnit.h  VnaFileSystem.cpp  VnaProperties.cpp  VnaProperties.h  VnaPulseGenerator.h  VnaSegmentedSweep.cpp  VnaSet.h  VnaSettings.cpp  VnaTimeDomain.cpp  VnaTrace.cpp  VnaTrigger.h
RsaToolbox/RsaToolbox/Test/: VnaTestClass.cpp  VnaTestClass.h
RsaToolbox_OLD/: Definitions.h  General.cpp  General.h  Log.h  NetworkData.cpp  NetworkData.h  RsibBus.cpp  Touchstone.cpp  Vna.cpp  (+5 more)
Test/CoreTest/: CMakeLists.txt  CoreTest.pro  HeaderTest.cpp  MeasureDataTest.h  MockDmm.py  ProcessTraceTest.cpp  ProcessTraceTest.h  SafeFrequencySweepTest.cpp  SpeedTrackerTest.cpp  TraceSettingsTest.h  main.cpp  project_sources.txt
Test/CoreTest/SpeedTrackerTest/: Doubly Nested Tasks.txt  Multiple Tasks.txt  Singly Nested Tasks.txt
Test/CoreTest/SpeedTrackerTest/SingleTask/: Single Task - long1.txt  Single Task - medium1.txt  Single Task - medium2.txt
(+560 files in other folders)
